--- a/src/main/resources/com/example/demo/friendList.fxml
+++ b/src/main/resources/com/example/demo/friendList.fxml
@@ -18,7 +18,7 @@
    <top>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="57.0" fitWidth="149.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
@@ -26,7 +26,7 @@
                   <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
-            <Pane prefHeight="73.0" prefWidth="506.0">
+            <Pane prefHeight="73.0" prefWidth="594.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
@@ -117,7 +117,7 @@
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: ffdde6;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#friendListStartUp" prefHeight="51.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend">
+                        <Button mnemonicParsing="false" onAction="#friendListStartUp" prefHeight="51.0" prefWidth="219.0" style="-fx-background-color: f38fa9;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" textFill="WHITE">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="12.0" />
                            </font></Button>
