--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -114,7 +114,7 @@
                         <Insets left="20.0" top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
+                  <ChoiceBox fx:id="destinationChoiceBox" prefHeight="25.0" prefWidth="191.33333333333334">
                      <VBox.margin>
                         <Insets left="20.0" top="10.0" />
                      </VBox.margin>
