--- a/src/main/resources/com/example/demo/reply8.fxml
+++ b/src/main/resources/com/example/demo/reply8.fxml
@@ -36,7 +36,7 @@
             <Insets left="20.0" />
          </VBox.margin>
       </Text>
-      <Button mnemonicParsing="false" onAction="#addReply8" text="Submit">
+      <Button mnemonicParsing="false" onAction="#addReply8" style="-fx-background-color: rgb(204,51,102); -fx-background-radius: 20;" text="Submit" textFill="WHITE">
          <VBox.margin>
             <Insets left="522.0" top="5.0" />
          </VBox.margin>
