--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -51,7 +51,7 @@
          </VBox.margin>
       </PasswordField>
       <Text fx:id="confirmPasswordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
-      <Button mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
+      <Button mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="25.0" prefWidth="68.0" style="-fx-background-radius: 20; -fx-background-color: rgb(219,112,147);" text="Confirm" textFill="WHITE">
          <VBox.margin>
             <Insets top="25.0" />
          </VBox.margin>
