--- a/src/main/resources/com/example/demo/forgotPassword.fxml
+++ b/src/main/resources/com/example/demo/forgotPassword.fxml
@@ -30,7 +30,7 @@
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#sendEmail" prefHeight="26.0" prefWidth="143.0" text="Temporary Password">
+      <Button mnemonicParsing="false" onAction="#sendEmail" prefHeight="26.0" prefWidth="143.0" style="-fx-background-color: rgb(128,218,235); -fx-background-radius: 20;" text="Temporary Password" textFill="WHITE">
          <VBox.margin>
             <Insets left="400.0" right="50.0" top="10.0" />
          </VBox.margin>
@@ -51,7 +51,7 @@
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
+      <Button mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="68.0" style="-fx-background-color: rgb(219,112,147); -fx-background-radius: 20;" text="Confirm" textFill="WHITE">
          <VBox.margin>
             <Insets top="40.0" />
          </VBox.margin>
