--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -71,7 +71,7 @@
             <Insets left="150.0" right="150.0" top="10.0" />
          </VBox.margin>
       </PasswordField>
-      <Button fx:id="login" defaultButton="true" mnemonicParsing="false" onAction="#loginButton" style="-fx-background-radius: 100;" text="Login">
+      <Button fx:id="login" defaultButton="true" mnemonicParsing="false" onAction="#loginButton" style="-fx-background-radius: 20; -fx-background-color: rgb(219,112,147);" text="Login" textFill="WHITE">
          <VBox.margin>
             <Insets top="40.0" />
          </VBox.margin>
